ecmascript/parser/tests/test262-error-references/fail/4485930b35bf8cb6.js.stderr
error: Rest element must be final element
 --> $DIR/tests/test262-parser/fail/4485930b35bf8cb6.js:1:5
  |
1 | [...a, b] = c
  |     ^

